name:                free-robot
version:             0.1.0.0
synopsis:            ToyRobot using Free Monads
description:        ToyRobot using Free Monads and custom DSL.
license:             MIT
license-file:        LICENSE
author:              Daniel Stankevich
maintainer:          standeo@gmail.com
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable free-robot
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , text
                     , free >= 2.0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
